buat landing page, navbar, sama footer

--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,36 @@
 @import "tailwindcss";
-@plugin "daisyui";
+@plugin "daisyui/theme" {
+    name: "light";
+    default: false;
+    prefersdark: false;
+    color-scheme: "light";
+    --color-base-100: oklch(100% 0 0);
+    --color-base-200: oklch(98% 0 0);
+    --color-base-300: oklch(95% 0 0);
+    --color-base-content: oklch(21% 0.006 285.885);
+    --color-primary: oklch(64% 0.2 131.684);
+    --color-primary-content: oklch(98% 0.031 120.757);
+    --color-secondary: oklch(87% 0.169 91.605);
+    --color-secondary-content: oklch(27% 0.077 45.635);
+    --color-accent: oklch(52% 0.154 150.069);
+    --color-accent-content: oklch(98% 0.018 155.826);
+    --color-neutral: oklch(14% 0.005 285.823);
+    --color-neutral-content: oklch(92% 0.004 286.32);
+    --color-info: oklch(74% 0.16 232.661);
+    --color-info-content: oklch(29% 0.066 243.157);
+    --color-success: oklch(76% 0.177 163.223);
+    --color-success-content: oklch(26% 0.051 172.552);
+    --color-warning: oklch(82% 0.189 84.429);
+    --color-warning-content: oklch(27% 0.077 45.635);
+    --color-error: oklch(63% 0.237 25.331);
+    --color-error-content: oklch(98% 0.003 247.858);
+    --radius-selector: 1rem;
+    --radius-field: 1rem;
+    --radius-box: 1rem;
+    --size-selector: 0.25rem;
+    --size-field: 0.25rem;
+    --border: 1px;
+    --depth: 1;
+    --noise: 0;
+  }
+  
